tests/specs/ecosystem/radix_ui_fork/react_collection/0_0_8.test
radix-ui-fork/react-collection/0.0.8
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@radix-ui-fork/react-compose-refs@0.0.8": "jsr:@radix-ui-fork/react-compose-refs@0.0.8",
      "jsr:@radix-ui-fork/react-context@0.0.8": "jsr:@radix-ui-fork/react-context@0.0.8",
      "jsr:@radix-ui-fork/react-primitive@0.0.8": "jsr:@radix-ui-fork/react-primitive@0.0.8",
      "jsr:@radix-ui-fork/react-slot@0.0.8": "jsr:@radix-ui-fork/react-slot@0.0.8",
      "npm:@types/react-dom@^18.2.0": "npm:@types/react-dom@18.3.0",
      "npm:@types/react@^18.2.0": "npm:@types/react@18.3.1",
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "jsr": {
      "@radix-ui-fork/react-compose-refs@0.0.8": {
        "integrity": "1383d4f2accaad3cdeaff3ee4f859b462eb26dce451973ee3fd168ad811da2c6",
        "dependencies": [
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/react-context@0.0.8": {
        "integrity": "d8c479e28d55e6aa5a4fdc40d805c4b146fc38e670ddd6aae58da8c7e33d6edc",
        "dependencies": [
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/react-primitive@0.0.8": {
        "integrity": "5d31c430a946d8a9d12618abb14c99363908a81af336663e4bb487139d3e7ecb",
        "dependencies": [
          "npm:@types/react-dom@^18.2.0",
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/react-slot@0.0.8": {
        "integrity": "ab722b1cb0b4b2ed64402ada44def2352eb2b47ddd8af605f44c7768a4e48a78",
        "dependencies": [
          "jsr:@radix-ui-fork/react-compose-refs@0.0.8",
          "npm:@types/react@^18.2.0"
        ]
      }
    },
    "npm": {
      "@types/prop-types@15.7.12": {
        "integrity": "sha512-5zvhXYtRNRluoE/jAp4GVsSduVUzNWKkOZrCDBWYtE7biZywwdC2AcEzg+cSMLFRfVgeAFqpfNabiPjxFddV1Q==",
        "dependencies": {}
      },
      "@types/react-dom@18.3.0": {
        "integrity": "sha512-EhwApuTmMBmXuFOikhQLIBUn6uFg81SwLMOAUgodJF14SOBOCMdU04gDoYi0WOJJHD144TL32z4yDqCW3dnkQg==",
        "dependencies": {
          "@types/react": "@types/react@18.3.1"
        }
      },
      "@types/react@18.3.1": {
        "integrity": "sha512-V0kuGBX3+prX+DQ/7r2qsv1NsdfnCLnTgnRJ1pYnxykBhGMz+qj+box5lq7XsO5mtZsBqpjwwTu/7wszPfMBcw==",
        "dependencies": {
          "@types/prop-types": "@types/prop-types@15.7.12",
          "csstype": "csstype@3.1.3"
        }
      },
      "csstype@3.1.3": {
        "integrity": "sha512-M1uQkMl8rQK/szD0LNhtqxIPLpimGm8sOBwU7lLnCpSbTyY3yeU1Vc7l4KT5zT4s/yOxHH5O7tIuuLOCnLADRw==",
        "dependencies": {}
      },
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
type CollectionElement = HTMLElement;
                         ~~~~~~~~~~~
    at file://<tmpdir>/src/Collection.tsx:6:26

TS2552 [ERROR]: Cannot find name 'HTMLElement'. Did you mean 'ItemElement'?
type Collection<ItemElement extends HTMLElement, ItemData = {
                                    ~~~~~~~~~~~
    at file://<tmpdir>/src/Collection.tsx:15:37

TS2552 [ERROR]: Cannot find name 'HTMLElement'. Did you mean 'ItemElement'?
function createCollection<ItemElement extends HTMLElement, ItemData = {
                                              ~~~~~~~~~~~
    at file://<tmpdir>/src/Collection.tsx:26:47

Found 3 errors.

